--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -102,6 +102,10 @@ footer{
 {
     background: none;
 }
+.panel-body{
+    padding: 0px;
+
+}
 .log{
     position: relative;
     overflow: visible;
@@ -124,16 +128,22 @@ footer{
     position: absolute;
     display: block;
     background-color: #E3E6E7;
-    left: 100px;
+    left: 80px;
     height: 100px;
-    top: 20px;
-    width: 90%;
+    top: 0px;
+    width: 93%;
     float: left;
     margin-top: 0px;
-    padding: 5px 15px;
+    padding: 0px 15px;
 }
 
-
+.corner{
+    position: absolute;
+    left: 70px;
+    height: 20px;
+    width: 20px;
+    top: 20px;
+}
 
 .timeline{
     display: block;
@@ -141,7 +151,55 @@ footer{
     background-color: #E3E6E7;
     height: 100%;
     width: 10px;
-    top: 0px;
     left: 20px;
 
+}
+
+
+/*--------------------Timeline------------*/
+
+.containerblog {
+    background: #ecf0f1;
+    border: 0px solid #ecf0f1;
+    border-radius: 0px;
+    padding-top: 40px;
+}
+
+.blogrol {
+    margin: 0px 0;
+}
+
+.blogrol article {
+    position: relative;
+    top: 10px;
+    left: 0px;
+    padding: 0 0px 40px 40px;
+    border-left: 6px solid #3498db;
+}
+.blogrol h1{
+    margin-top: 0px;
+}
+.date{
+    position: absolute;
+    background: #3498db;
+    border-radius: 50%;
+    height: 58px;
+    width: 58px;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    line-height: 20px;
+   }
+.date p:first-child{
+    padding-top: 5px;
+}
+
+.blogrol .date {
+    left: -32px;
+    top: -22px;
+}
+
+.blogrol article:last-child {
+    border-left: 0;
+    margin-left: 6px;
 }
