--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,6 +6,17 @@ body {
 ::selection {color:#ffffff;background:#f4726d;}
 ::-moz-selection {color:#ffffff;background:#f4726d;}
 
+
+
+a:link, a:visited{
+    color: #f4726d;
+}
+
+a:hover, a:active{
+    color: #f4726D;
+}
+
+
 /* ---- NAVIGATION ---- */
 .navbar-brand img{
     max-height: 50px;
@@ -63,6 +74,29 @@ body {
         display: block;
         padding: 28px 15px;
     }
+}
+
+.nav .open>a, .nav .open>a:hover, .nav .open>a:focus{
+    background-color: #f4726d;
+    border-color: #cc6860;
+}
+
+.nav .open a{
+    color: #ffffff;
+}
+
+.nav .open li a{
+    color: #888888;
+}
+
+.dropdown-menu{
+    border-radius: 0;
+}
+
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #f4726d;
 }
 
 /* ---- Jumbotron ---- */
@@ -174,9 +208,25 @@ footer hr {
     text-decoration: none;
 }
 
-/*--------------------Package Log --------------*/
+/* ---- Home How To ---- */
 
-/*--------------------Timeline------------------*/
+.red{
+    background-color: #f4726d ;
+    padding: 30px;
+    border-radius: 50%;
+}
+.red img{
+    width: 100%;
+    height: 100%;
+
+}
+.line{
+    height: 105px;
+    border-bottom: 10px solid #f4726d;
+}
+
+
+/* ---- Timeline ---- */
 
 .containerblog {
     /*background: #ecf0f1;*/
@@ -194,7 +244,7 @@ footer hr {
     top: 10px;
     left: 0px;
     padding: 0 0px 40px 40px;
-    border-left: 6px solid #3498db;
+    border-left: 6px solid #f4726D;
 
 }
 .blogrol h3{
@@ -202,7 +252,7 @@ footer hr {
 }
 .date{
     position: absolute;
-    background: #3498db;
+    background: #f4726D;
     border-radius: 50%;
     height: 58px;
     width: 58px;
